--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+div {
+	display: inline-block;
+}
+
 .music-board {
 	width: 80%;
 	height: 1000px;
@@ -7,10 +11,29 @@
 }
 
 .music-btn {
-	display: inline-block;
-	height: 150px;
-	width: 300px;
+	height: 50px;
+	width: 150px;
 	background-color: darkgrey;
-	margin: 10%;
+	margin: 3%;
+	border-radius: 40px;
+	box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
 	
 }
+
+.slider-bg {
+	height: 40px;
+	width: 120px;
+	background-color: dimgray;
+	margin: 5px 15px;
+	border-radius: 40px;
+}
+
+.slider {
+	height: 30px;
+	width: 30px;
+	background-color: blue;
+	margin: 5px 8px;
+	border-radius: 50%;
+}
+
+
